Refactored to standardise style; added specs.

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,2 +1,2 @@
 name=My BlueEyes Project
-description=A basic BlueEyes project with sbt-onejar and sbt-revolver.
+description=Bare-bones BlueEyes 0.6 template using sbt-onejar and sbt-revolver.
