Removed mongo from BlueEyes configuration.

--- a/src/main/g8/src/main/resources/development.conf
+++ b/src/main/g8/src/main/resources/development.conf
@@ -3,12 +3,8 @@ server {
   sslPort = 8181
 }
 services {
-  app {
+  echo {
     v1 {
-      mongo {
-        servers = ["localhost"]
-        database = "app"
-      }
     }
   }
 }
