Added organization and version parameters

--- a/src/main/g8/default.properties
+++ b/src/main/g8/default.properties
@@ -1,3 +1,5 @@
 name=My BlueEyes Project
 description=Bare-bones BlueEyes 0.6 template using sbt-onejar and sbt-revolver.
-package=code
+organization=com.example
+version=0.1
+package=my.code
